# quantem

./: .gitignore  CONTRIBUTORS.md  pyproject.toml  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: check-pr-main-version.yml  check-uv-lock.yml  deploy.yml  sync-dev-main.yml  update-lock-file-cron.yml  uv-pytests.yml
notebooks/: 01 - reconstruct and subtract.ipynb  02 - co-recon using multiplex object.ipynb  ptycho_wrapper.py  visualizers.py
src/quantem/: __init__.py
tests/: conftest.py  test_config.py
tests/datastructures/: test_dataset.py  test_dataset5dstem.py
tests/diffraction/: test_com.py
tests/diffractive_imaging/: test_direct_ptychography_angles.py  test_direct_ptychography_optimization_printing.py  test_optimization_tuples.py  test_ptychography.py  test_rotation_angle_api.py
tests/hpc/: __init__.py  test_io.py
tests/imaging/: test_lattice.py  test_time_series.py  test_torch_gmm.py
tests/io/: test_read_5dstem.py
widget/: package-lock.json  package.json  pyproject.toml  vite.config.js
widget/js/: CONFIG.ts  components.tsx  index.jsx  shared.ts  show4dstem.css  show4dstem.tsx  webgpu-fft.ts
widget/js/core/: canvas-utils.ts  canvas.ts  colormaps.ts  colors.ts  export.ts  fft-utils.ts  format.ts  hooks.ts  index.ts  styles.ts  webgpu-hook.ts
widget/js/show2d/: index.tsx
widget/js/show3d/: index.tsx
widget/js/show4dstem/: index.tsx
widget/src/quantem/widget/: __init__.py  array_utils.py  show4dstem.py
widget/tests/: test_widget.py  test_widget_show4dstem.py  visual_check.py
(+115 files in other folders)
