[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantem.widget"
version = "0.0.1"
description = "Interactive custom Python widgets for electron microscopy"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantem"]
artifacts = ["src/quantem/widget/static/**"]
